--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.4.0",
     "ajv": "^8.16.0",
-    "bootstrap": "4.6.2",
-    "chart.js": "3.9.1",
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
     "classnames": "2.3.2",
     "perfect-scrollbar": "1.5.5",
     "prop-types": "15.8.1",
     "react": "^18.2.0",
-    "react-chartjs-2": "3.3.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-notification-alert": "0.0.13",
     "react-router-dom": "6.11.1",
@@ -43,7 +43,7 @@
   ],
   "optionalDependencies": {
     "eslint-plugin-flowtype": "8.0.3",
-    "reactstrap": "8.10.1"
+    "reactstrap": "^10.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
