--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "version": "1.2.2",
   "private": true,
   "homepage": "https://demos.creative-tim.com/black-dashboard-react/#/admin/dashboard",
+  "packageManager": "bun@1.2.14",
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.4.0",
     "ajv": "^8.16.0",
-    "bootstrap": "4.6.2",
-    "chart.js": "3.9.1",
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
     "classnames": "2.3.2",
     "perfect-scrollbar": "1.5.5",
     "prop-types": "15.8.1",
-    "react": ">=16.8.0",
-    "react-chartjs-2": "3.3.0",
-    "react-dom": ">=16.8.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
     "react-notification-alert": "0.0.13",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
     "sass": "1.62.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "cross-env PUBLIC_URL=/ cross-env CI=false react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
-    "compile-scss": "sass src/assets/scss/black-dashboard-react.scss src/assets/css/black-dashboard-react.css",
-    "minify-scss": "sass src/assets/scss/black-dashboard-react.scss src/assets/css/black-dashboard-react.min.css --style compressed"
+    "start": "bunx react-scripts start",
+    "build": "bunx react-scripts build",
+    "test": "bunx react-scripts test --passWithNoTests",
+    "install:clean": "rm -rf node_modules/ && rm -f bun.lockb && bun install && bun run start",
+    "compile-scss": "bunx sass src/assets/scss/black-dashboard-react.scss src/assets/css/black-dashboard-react.css",
+    "minify-scss": "bunx sass src/assets/scss/black-dashboard-react.scss src/assets/css/black-dashboard-react.min.css --style compressed"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,7 +43,7 @@
   ],
   "optionalDependencies": {
     "eslint-plugin-flowtype": "8.0.3",
-    "reactstrap": "8.10.1"
+    "reactstrap": "^10.2.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
